<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HashChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_views">Views</string>
    <string name="title_activity_clist">CList</string>
    <string name="tv_signin">Sign In</string>
    <string name="tv_welcome">Welcome to..</string>
    <string name="tv_welcome2">Hash Chat</string>
    <string name="txt_username">Username</string>
    <string name="txt_pwd">Password</string>
    <string name="btn_list">List</string>
    <string name="color">black</string>
    <string name="title_activity_contact_manager">ContactManager</string>
    <string name="showInvisible">Show invisible contacts only</string>
	<string name="addContactButtonLabel">Add contacts</string>
</resources>
